# options_analysis

./: .gitignore  LICENSE  README.md  README2.md  __init__.py  calculate_historical.py  db_sql.sql  models.py  pyproject.toml  requirements.txt  setup.py  setup_project.py  test_data_loader.py  test_validator.py  visualization.py
data_manager/: __init__.py  data_loader.py  data_validator.py  database.py
data_manager/data/: README.md  holiday_calendars.py
docs/: README.md  docs-readme.md  methodology-doc.md  sample_data_format.csv
garch/: __init__.py  checkpoint.py  data_prep.py  estimator.py  forecaster.py  holiday_handler.py  models.py
regression/: error_correction.py  expander.py  expanding_window.py  level_regression.py  validation.py  visualization.py
results/spx_analysis/: spx_results.csv
scripts/: analyze_db.py  plot_error_correction.py  plot_regression.py  run_historical.py  run_pilot.py  show_windows.py  test_error_correction.py  test_expanding_window.py  test_regression.py  verify_db.py  visualize_db.py
tests/: conftest.py  test_database.py  test_expander.py  test_forecaster.py  test_garch.py  test_pipeline.py  test_regression.py  test_visualization.py
utils/: __init__.py  db_manager.py  progress.py  visualization.py
workflows/: __init__.py  run_regression_sequence.py
