[project]
name = "options-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arch>=5.0.0",
    "duckdb>=1.1.3",
    "ipython>=8.31.0",
    "matplotlib>=3.4.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "psutil>=6.1.1",
    "scipy>=1.7.0",
    "seaborn>=0.11.0",
    "setuptools>=75.8.0",
    "streamlit>=1.41.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
lint = [
    "ruff>=0.9.3",
]
